# queuebie-test

./: .pre-commit-config.yaml  README.md  pyproject.toml
apps/config/: settings.py  urls.py
apps/logging/: apps.py
apps/logging/handlers/commands/: logging.py
apps/logging/handlers/events/: order.py  payment.py  product.py  shipping.py
apps/logging/messages/commands/: logging.py
apps/logging/messages/events/: logging.py
apps/order/: admin.py  apps.py  models.py  services.py
apps/order/handlers/commands/: order.py
apps/order/handlers/events/: payment.py  shipping.py
apps/order/migrations/: 0001_initial.py  0002_initial.py  0003_alter_order_status.py  0004_remove_order_shipping_type.py
apps/payment/: admin.py  apps.py  exceptions.py  models.py  services.py
apps/payment/migrations/: 0001_initial.py  0002_paymenttransaction.py  0003_paymenttransaction_payment_method.py  0004_paymenttransaction_amount.py
apps/product/: apps.py  models.py  services.py  urls.py  views.py
apps/product/migrations/: 0001_initial.py  0002_product_is_bulky.py  0002_product_price.py
apps/shipping/: admin.py  models.py  services.py
apps/shipping/migrations/: 0001_initial.py  0002_alter_deliverynote_shipping_type_delete_shippingtype.py  0002_deliverynote.py  0003_deliverynote_shipping_type.py
apps/shopping_cart/: apps.py  models.py  services.py  urls.py  views.py
apps/shopping_cart/migrations/: 0001_initial.py  0002_rename_payment_methods_shoppingcart_payment_method.py  0003_shoppingcart_status.py  0004_alter_shoppingcart_status.py
templates/: base.html
(+24 files in other folders)
